@startuml io_kind
!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml
hide empty members

interface Kind<F extends WitnessArity<?>, A> <<HKT Bridge>>

note "Witness implements\nWitnessArity<TypeArity.Unary>" as WitnessNote

interface IOKind<A> extends Kind<IOKind.Witness, A> {
  ' Witness implements WitnessArity<TypeArity.Unary>
}

interface IO<A> {
  ' Actual IO Implementation
}


  class IOKindHelper {
    + {static} Kind<IOKind.Witness, A> widen(@NonNull IO<A>)
    + {static} @NonNull IO<A> narrow(@Nullable Kind<IOKind.Witness, A>)
    + {static} Kind<IOKind.Witness, A> delay(Supplier<A>)
    + {static} A unsafeRunSync(Kind<IOKind<?>, A>)
    ' ...
  }

  class IOHolder<A> implements IOKind<A> {
    - @NonNull IO<A> ioInstance
  }

  IOKindHelper ..> IOHolder : creates
  IOKindHelper ..> IO : narrows to / widens from
  IOHolder o--> IO : holds


@enduml